--- a/modelbase/.cproject
+++ b/modelbase/.cproject
@@ -114,6 +114,7 @@
 					</target>
 				</buildTargets>
 			</storageModule>
+			<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 			<storageModule moduleId="org.eclipse.cdt.core.pathentry">
 				<pathentry base-path="/usr/include/qt4/" include="" kind="inc" path="" system="true"/>
 				<pathentry base-path="/usr/include/qt4/" include="QtDesigner" kind="inc" path="" system="true"/>
@@ -135,6 +136,9 @@
 				<pathentry base-path="/usr/include/qt4/" include="QtScriptTools" kind="inc" path="" system="true"/>
 				<pathentry base-path="/usr/include/qt4/" include="QtUiTools" kind="inc" path="" system="true"/>
 				<pathentry base-path="/usr/include/qt4/" include="Qt" kind="inc" path="" system="true"/>
+				<pathentry include="/store/eth/Research/Envision/Master thesis/v0" kind="inc" path="" system="true"/>
+				<pathentry kind="src" path=""/>
+				<pathentry kind="out" path=""/>
 			</storageModule>
 		</cconfiguration>
 	</storageModule>
