--- a/Core/.cproject
+++ b/Core/.cproject
@@ -96,27 +96,48 @@
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 			<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
+			<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
+			<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
+				<buildTargets>
+					<target name="Qt Release Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
+						<buildCommand>make</buildCommand>
+						<buildArguments/>
+						<buildTarget>release</buildTarget>
+						<stopOnError>false</stopOnError>
+						<useDefaultCommand>false</useDefaultCommand>
+						<runAllBuilders>true</runAllBuilders>
+					</target>
+					<target name="Qt Debug Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
+						<buildCommand>make</buildCommand>
+						<buildArguments/>
+						<buildTarget>debug</buildTarget>
+						<stopOnError>false</stopOnError>
+						<useDefaultCommand>false</useDefaultCommand>
+						<runAllBuilders>true</runAllBuilders>
+					</target>
+				</buildTargets>
+			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.pathentry">
-				<pathentry base-path="/usr/include/qt4/" include="" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtDesigner" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtCore" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="Qt3Support" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtHelp" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtNetwork" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtDBus" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtSql" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtOpenGL" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtTest" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtWebKit" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtXml" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtSvg" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtXmlPatterns" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtGui" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtDeclarative" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtScript" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtScriptTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtUiTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="Qt" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtDeclarative" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtCore" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtDesigner" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtUiTools" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtTest" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtXmlPatterns" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtNetwork" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtScript" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtHelp" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtXml" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="Qt" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtDBus" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="Qt3Support" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtScriptTools" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtSql" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtGui" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtOpenGL" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtSvg" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtWebKit" kind="inc" path="" system="true"/>
 				<pathentry kind="src" path=""/>
 				<pathentry kind="out" path=""/>
 				<pathentry base-path="/local/qtsdk/qt/include" include="" kind="inc" path="" system="true"/>
@@ -144,25 +165,6 @@
 				<pathentry base-path="/local/qtsdk/qt/include" include="phonon" kind="inc" path="" system="true"/>
 				<pathentry base-path="/local/qtsdk/qt/include" include="QtSvg" kind="inc" path="" system="true"/>
 				<pathentry base-path="/local/qtsdk/qt/include" include="QtGui" kind="inc" path="" system="true"/>
-			</storageModule>
-			<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
-			<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
-				<buildTargets>
-					<target name="Qt Release Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
-						<buildCommand>make</buildCommand>
-						<buildTarget>release</buildTarget>
-						<stopOnError>false</stopOnError>
-						<useDefaultCommand>false</useDefaultCommand>
-						<runAllBuilders>true</runAllBuilders>
-					</target>
-					<target name="Qt Debug Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
-						<buildCommand>make</buildCommand>
-						<buildTarget>debug</buildTarget>
-						<stopOnError>false</stopOnError>
-						<useDefaultCommand>false</useDefaultCommand>
-						<runAllBuilders>true</runAllBuilders>
-					</target>
-				</buildTargets>
 			</storageModule>
 		</cconfiguration>
 	</storageModule>
