--- a/SelfTest/.cproject
+++ b/SelfTest/.cproject
@@ -99,7 +99,6 @@
 				<buildTargets>
 					<target name="Qt Release Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
 						<buildCommand>make</buildCommand>
-						<buildArguments/>
 						<buildTarget>release</buildTarget>
 						<stopOnError>false</stopOnError>
 						<useDefaultCommand>false</useDefaultCommand>
@@ -107,7 +106,6 @@
 					</target>
 					<target name="Qt Debug Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
 						<buildCommand>make</buildCommand>
-						<buildArguments/>
 						<buildTarget>debug</buildTarget>
 						<stopOnError>false</stopOnError>
 						<useDefaultCommand>false</useDefaultCommand>
@@ -116,26 +114,26 @@
 				</buildTargets>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.pathentry">
-				<pathentry base-path="/usr/include/qt4/" include="" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtDesigner" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtCore" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="Qt3Support" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtHelp" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtNetwork" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtDBus" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtSql" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtOpenGL" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtTest" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtWebKit" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtXml" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtSvg" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtXmlPatterns" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtGui" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtDeclarative" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtScript" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtScriptTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="QtUiTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4/" include="Qt" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtDeclarative" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtCore" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtDesigner" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtUiTools" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtTest" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtXmlPatterns" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtNetwork" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtScript" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtHelp" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtXml" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="Qt" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtDBus" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="Qt3Support" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtScriptTools" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtSql" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtGui" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtOpenGL" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtSvg" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" include="QtWebKit" kind="inc" path="" system="true"/>
 				<pathentry base-path="/local/qtsdk/qt/include" include="" kind="inc" path="" system="true"/>
 				<pathentry base-path="/local/qtsdk/qt/include" include="QtScriptTools" kind="inc" path="" system="true"/>
 				<pathentry base-path="/local/qtsdk/qt/include" include="QtWebKit" kind="inc" path="" system="true"/>
