--- a/FilePersistence/.project
+++ b/FilePersistence/.project
@@ -3,6 +3,9 @@
 	<name>FilePersistence</name>
 	<comment></comment>
 	<projects>
+		<project>Core</project>
+		<project>Logger</project>
+		<project>ModelBase</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
