--- a/Core/.cproject
+++ b/Core/.cproject
@@ -5,7 +5,11 @@
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="org.eclipse.cdt.core.default.config.1759624900">
 			<storageModule buildSystemId="org.eclipse.cdt.core.defaultConfigDataProvider" id="org.eclipse.cdt.core.default.config.1759624900" moduleId="org.eclipse.cdt.core.settings" name="Configuration">
-				<externalSettings/>
+				<externalSettings>
+					<externalSetting>
+						<entry flags="RESOLVED" kind="includePath" name="/usr/include/qt4"/>
+					</externalSetting>
+				</externalSettings>
 				<extensions>
 					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
 				</extensions>
@@ -118,53 +122,9 @@
 				</buildTargets>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.pathentry">
-				<pathentry base-path="/usr/include/qt4" include="" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtDeclarative" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtCore" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtDesigner" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtUiTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtTest" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtXmlPatterns" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtNetwork" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtScript" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtHelp" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtXml" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="Qt" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtDBus" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="Qt3Support" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtScriptTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtSql" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtGui" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtOpenGL" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtSvg" kind="inc" path="" system="true"/>
-				<pathentry base-path="/usr/include/qt4" include="QtWebKit" kind="inc" path="" system="true"/>
+				<pathentry base-path="/usr/include/qt4" exported="true" include="" kind="inc" path="" system="true"/>
 				<pathentry kind="src" path=""/>
 				<pathentry kind="out" path=""/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtScriptTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtWebKit" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtXml" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtTest" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtUiTools" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtNetwork" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtCore" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtMultimedia" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="Qt" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtXmlPatterns" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="phonon_compat" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="Qt3Support" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtSql" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtOpenVG" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtScript" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtDBus" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtDeclarative" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="ActiveQt" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtHelp" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtOpenGL" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtDesigner" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="phonon" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtSvg" kind="inc" path="" system="true"/>
-				<pathentry base-path="/local/qtsdk/qt/include" include="QtGui" kind="inc" path="" system="true"/>
 			</storageModule>
 		</cconfiguration>
 	</storageModule>
