--- a/FilePersistence/.cproject
+++ b/FilePersistence/.cproject
@@ -117,6 +117,9 @@
 			<storageModule moduleId="org.eclipse.cdt.core.pathentry">
 				<pathentry kind="src" path=""/>
 				<pathentry kind="out" path=""/>
+				<pathentry kind="prj" path="/Core"/>
+				<pathentry kind="prj" path="/Logger"/>
+				<pathentry kind="prj" path="/ModelBase"/>
 			</storageModule>
 		</cconfiguration>
 	</storageModule>
