--- a/HelloWorld/.project
+++ b/HelloWorld/.project
@@ -3,6 +3,7 @@
 	<name>HelloWorld</name>
 	<comment></comment>
 	<projects>
+		<project>Core</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
