--- a/ModelBase/.project
+++ b/ModelBase/.project
@@ -3,6 +3,9 @@
 	<name>ModelBase</name>
 	<comment></comment>
 	<projects>
+		<project>Core</project>
+		<project>Logger</project>
+		<project>SelfTest</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
