Removed custom path entry for build tool (make). The Qt binaries should be in the system path

--- a/Core/.project
+++ b/Core/.project
@@ -64,7 +64,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.environment</key>
-					<value>PATH=/usr/bin/:/local/qtsdk/qt/bin:${env_var:PATH}|</value>
+					<value></value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
