--- a/APIDepTest/.project
+++ b/APIDepTest/.project
@@ -66,7 +66,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.environment</key>
-					<value>PATH=/usr/bin/:/local/qtsdk/qt/bin:${env_var:PATH}|</value>
+					<value></value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
