--- a/ModelBase/.project
+++ b/ModelBase/.project
@@ -67,7 +67,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.environment</key>
-					<value>PATH=/usr/bin/:/local/qtsdk/qt/bin:${env_var:PATH}|</value>
+					<value></value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
