--- a/PluginGenerator/Plugin/.cproject
+++ b/PluginGenerator/Plugin/.cproject
@@ -117,6 +117,8 @@
 				<pathentry kind="src" path=""/>
 				<pathentry kind="out" path=""/>
 				<pathentry kind="prj" path="/Core"/>
+				<pathentry kind="prj" path="/Logger"/>
+				<pathentry kind="prj" path="/SelfTest"/>
 			</storageModule>
 		</cconfiguration>
 	</storageModule>
