Change Eclipse project settings to enable multi-core compilation

--- a/APIDepTest/.project
+++ b/APIDepTest/.project
@@ -46,7 +46,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.build.target.inc</key>
-					<value>debug debug-install</value>
+					<value>debug-install -j8</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.enableAutoBuild</key>
