--- a/Core/.cproject
+++ b/Core/.cproject
@@ -6,7 +6,7 @@
 				<externalSettings>
 					<externalSetting>
 						<entry flags="RESOLVED" kind="includePath" name="/usr/include/qt4"/>
-						<entry flags="RESOLVED" kind="includePath" name="/usr/include/c++/4.7"/>
+						<entry flags="RESOLVED" kind="includePath" name="/usr/include/c++/4.8"/>
 					</externalSetting>
 				</externalSettings>
 				<extensions>
@@ -124,8 +124,8 @@
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="org.eclipse.cdt.core.pathentry">
-		<pathentry base-path="/usr/include/qt4" exported="true" include="" kind="inc" path="" system="true"/>
-		<pathentry exported="true" include="/usr/include/c++/4.7" kind="inc" path="" system="true"/>
+		<pathentry exported="true" include="/usr/include/qt4" kind="inc" path="" system="true"/>
+		<pathentry exported="true" include="/usr/include/c++/4.8" kind="inc" path="" system="true"/>
 		<pathentry kind="src" path=""/>
 		<pathentry kind="out" path=""/>
 	</storageModule>
