A partial attempt at making precompiled headers work with CMake

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -43,6 +43,7 @@ add_library( core SHARED
     src/PluginManager.cpp
     src/EnvisionWindow.cpp
     src/global.cpp )
+add_dependencies(core precompiled)
 
 install (TARGETS core DESTINATION ${BUILD_DIR})
 
