Initial plug-in support for CMake (not yet working)

--- a/Launcher/CMakeLists.txt
+++ b/Launcher/CMakeLists.txt
@@ -5,6 +5,6 @@ include(../CMake/common.cmake)
 
 add_executable( Envision src/precompiled.h src/launcher.cpp )
 
-target_link_libraries(Envision -lCore Qt5::Core Qt5::Gui)
+target_link_libraries(Envision Core Qt5::Core Qt5::Gui)
 
 install (TARGETS Envision DESTINATION ${BUILD_DIR})
