Add CMakeLists.txt for ModelBase
Lots of paths had to be made relative

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,6 @@ add_subdirectory("APIDepTest")
 # Basic utilities
 add_subdirectory("SelfTest")
 add_subdirectory("Logger")
+
+# Generic Layer
+add_subdirectory("ModelBase")
