Add CMakeLists.txt for FilePersistence
Including resources was a bit tricky, but now it
should work even better than before as the .qrc
file is updated even if cmake is not run.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_subdirectory("Logger")
 
 # Generic Layer
 add_subdirectory("ModelBase")
+add_subdirectory("FilePersistence")
 add_subdirectory("VisualizationBase")
