Add Comments to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory("ModelBase")
 add_subdirectory("FilePersistence")
 add_subdirectory("VisualizationBase")
 add_subdirectory("InteractionBase")
+add_subdirectory("Comments")
