--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory("Comments")
 add_subdirectory("Export")
 
 # Object-Oriented layer - Base
-# add_subdirectory("OOModel")
+add_subdirectory("OOModel")
 # add_subdirectory("OOVisualization")
 # add_subdirectory("OOInteraction")
 
