Add OOInteraction to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_subdirectory("Export")
 # Object-Oriented layer - Base
 add_subdirectory("OOModel")
 add_subdirectory("OOVisualization")
-# add_subdirectory("OOInteraction")
+add_subdirectory("OOInteraction")
 
 # Object-Oriented layer - Extras
 # add_subdirectory("JavaExport")
