Add OODebug to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ add_subdirectory("OOInteraction")
 
 # Object-Oriented layer - Extras
 add_subdirectory("JavaExport")
-# add_subdirectory("OODebug")
+add_subdirectory("OODebug")
 # add_subdirectory("CppExport")
 # add_subdirectory("CppImport")
 # add_subdirectory("PythonWrapperGenerator")
