Add CustomMethodCall to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,5 +39,5 @@ add_subdirectory("ContractsLibrary")
 add_subdirectory("AlloyIntegration")
 
 # Object-Oriented layer - Demos
-# add_subdirectory("CustomMethodCall")
-# add_subdirectory("ControlFlowVisualization")
+add_subdirectory("CustomMethodCall")
+#  add_subdirectory("ControlFlowVisualization")
