Fix CppImport compilation under CMake

--- a/CppImport/CMakeLists.txt
+++ b/CppImport/CMakeLists.txt
@@ -17,7 +17,7 @@ link_directories(${clangLibPath_})
 execute_process(COMMAND ${ENVISION_ROOT_DIR}/misc/llvm-config-envision.sh --libs cppbackend analysis codegen bitreader option core
 	OUTPUT_VARIABLE clangLibs_)
 string(STRIP "${clangLibs_}" clangLibs_)
-set(clangLibs_ ${clangLibs_} -lclangTooling -lclangFrontendTool -lclangFrontend -lclangDriver -lclangSerialization -lclangParse -lclangSema -lclangAnalysis -lclangEdit -lclangAST -lclangLex -lclangBasic)
+set(clangLibs_ -lclangTooling -lclangFrontendTool -lclangFrontend -lclangDriver -lclangSerialization -lclangParse -lclangSema -lclangAnalysis -lclangEdit -lclangAST -lclangLex -lclangBasic ${clangLibs_} -lz -ldl -lncurses)
 
 add_definitions(-D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS)
 
