Add canReach query

--- a/InformationScripting/CMakeLists.txt
+++ b/InformationScripting/CMakeLists.txt
@@ -88,6 +88,7 @@ add_library(InformationScripting SHARED
 	src/queries/Count.h
 	src/queries/Join.h
 	src/queries/Filter.h
+	src/queries/CanReach.h
 	src/query_framework/QueryRuntimeException.h
 	src/query_framework/HighlightOverlayStyle.h
 	src/InformationScriptingException.cpp
@@ -147,6 +148,7 @@ add_library(InformationScripting SHARED
 	src/queries/Count.cpp
 	src/queries/Join.cpp
 	src/queries/Filter.cpp
+	src/queries/CanReach.cpp
 	src/query_framework/QueryRuntimeException.cpp
 	src/query_framework/HighlightOverlayStyle.cpp
 )
