add support for importing comments and empty lines

--- a/CppImport/CMakeLists.txt
+++ b/CppImport/CMakeLists.txt
@@ -49,9 +49,10 @@ add_library(CppImport SHARED
 	src/macro/AllMetaDefinitions.h
 	src/macro/NodeHelpers.h
 	src/macro/ClangHelpers.h
-	src/macro/EnvisionToClangMap.h
+	src/EnvisionToClangMap.h
 	src/macro/NodeToCloneMap.h
 	src/macro/LexicalTransformations.h
+	src/Comment.h
 	src/CppImportException.cpp
 	test/SimpleTest.cpp
 	src/ClangAstConsumer.cpp
@@ -76,9 +77,10 @@ add_library(CppImport SHARED
 	src/macro/AllMetaDefinitions.cpp
 	src/macro/NodeHelpers.cpp
 	src/macro/ClangHelpers.cpp
-	src/macro/EnvisionToClangMap.cpp
+	src/EnvisionToClangMap.cpp
 	src/macro/NodeToCloneMap.cpp
 	src/macro/LexicalTransformations.cpp
+	src/Comment.cpp
 )
 
 target_link_libraries(CppImport OOInteraction ${clangLibs_})
